<resources>
    <string name="app_name">AppPlanteUmaArvore</string>
    <string name="cadastre_se_aqui"><u>Cadastre-se aqui!</u></string>
    <string name="plante_numa_n_rvore">Plante uma árvore</string>
    <string name="nome">Nome</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="desenvolvido_por_lucas_coutinho">Desenvolvido por Lucas Coutinho</string>
    <string name="rvores_do_brasil">Árvores do Brasil</string>
    <string name="escolha_sua_semente">Escolha sua semente:</string>
    <string name="jacarand">Jacarandá</string>
    <string name="rvore_1">Árvore 1</string>
    <string name="ip_amarelo">Ipê Amarelo</string>
    <string name="rvore_2">Árvore 2</string>
    <string name="quaresmeira">Quaresmeira</string>
    <string name="rvore_3">Árvore 3</string>
    <string name="encontrar_onde_comprar">Encontrar onde comprar</string>
    <string name="pontos_de_vendas_de_sementes">Pontos de vendas de sementes</string>
    <string name="mapa">Mapa</string>
    <string name="plante_as_sementes_compradas_para_salvar_o_meio_ambiente_veja_o_ranking_dos_usuarios_que_mais_plantaram">Plante as sementes compradas para salvar o meio ambiente. Veja o ranking dos usuarios que mais plantaram.</string>
    <string name="ver_ranking">Ver ranking</string>
    <string name="ranking">Ranking</string>
    <string name="posi_o_nome_pontos">Posição Nome Pontos</string>
    <string name="cadastro">Cadastro</string>
    <string name="endere_o">Endereço</string>
    <string name="cadastrar">Cadastrar</string>
</resources>