<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/arvore"
    android:backgroundTint="@color/branco"
    android:backgroundTintMode="src_over"
    android:orientation="vertical"
    tools:context=".CadastroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/marrom"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/cadastro"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textSize="32sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/campos"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:hint="@string/nome"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="28sp"
            android:autofillHints=""
            android:inputType="text"
            android:id="@+id/cadastroNome"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/campos"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:hint="@string/endere_o"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="28sp"
            android:autofillHints=""
            android:inputType="text"
            android:id="@+id/cadastroEndereco"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/campos"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:hint="@string/e_mail"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="28sp"
            android:autofillHints=""
            android:inputType="textEmailAddress"
            android:id="@+id/cadastroEmail"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/campos"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="28sp"
            android:autofillHints=""
            android:id="@+id/cadastroSenha"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/marrom"
            android:text="@string/cadastrar"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="28sp"
            android:onClick="cadastrar"/>

    </LinearLayout>

</ScrollView>