<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/arvore"
    android:backgroundTint="@color/branco"
    android:backgroundTintMode="src_over"
    android:orientation="vertical"
    tools:context=".TerceiraActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/marrom"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/pontos_de_vendas_de_sementes"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/campos"
            app:cardElevation="8dp"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/mapa"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/mapa" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/campos"
            app:cardElevation="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:cardCornerRadius="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plante_as_sementes_compradas_para_salvar_o_meio_ambiente_veja_o_ranking_dos_usuarios_que_mais_plantaram"
                android:textAlignment="center"
                android:background="@drawable/campos"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="26sp"
                android:padding="2dp"/>

        </androidx.cardview.widget.CardView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/marrom"
            android:text="@string/ver_ranking"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="28sp"
            android:onClick="verRanking"/>

    </LinearLayout>

</ScrollView>